src/objects/ss_NonLogin__c.object
<CustomObject>
    <description>snapshot of daily non login user</description>
    <fields>
        <fullName>Alias__c</fullName>
        <label>Alias</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <description>Application</description>
        <inlineHelpText>Application</inlineHelpText>
        <label>Application</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Firstname__c</fullName>
        <label>Firstname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastLogin__c</fullName>
        <label>Last Login</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lastname__c</fullName>
        <label>Lastname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <label>Profile</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weekday__c</fullName>
        <formula>CASE( MOD(datevalue(CreatedDate) - DATE(1900, 1, 7), 7), 0, &quot;Sunday&quot;, 1, &quot;Monday&quot;, 2, &quot;Tuesday&quot;, 3, &quot;Wednesday&quot;, 4, &quot;Thursday&quot;, 5, &quot;Friday&quot;, 6, &quot;Saturday&quot;, &quot;Error&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weekday</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isActive</label>
        <type>Checkbox</type>
    </fields>
    <label>Snapshot Non Login</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Profile__c</columns>
        <columns>Username__c</columns>
        <columns>Firstname__c</columns>
        <columns>Lastname__c</columns>
        <columns>isActive__c</columns>
        <columns>LastLogin__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Today</fullName>
        <columns>NAME</columns>
        <columns>Profile__c</columns>
        <columns>Username__c</columns>
        <columns>Firstname__c</columns>
        <columns>Lastname__c</columns>
        <columns>isActive__c</columns>
        <columns>LastLogin__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Application__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>LastLogin__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>Lastname__c</field>
            <operation>notContain</operation>
            <value>user,system</value>
        </filters>
        <label>Today</label>
    </listViews>
    <listViews>
        <fullName>yesterday</fullName>
        <columns>NAME</columns>
        <columns>Profile__c</columns>
        <columns>Username__c</columns>
        <columns>Firstname__c</columns>
        <columns>Lastname__c</columns>
        <columns>isActive__c</columns>
        <columns>LastLogin__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <filters>
            <field>LastLogin__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Yesterday</label>
    </listViews>
    <nameField>
        <label>SnapshotNonLogin Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SnapshotNonLogins</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>